--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,11 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.9"
 ipykernel = "^6.25.2"
 fastapi = "^0.104.0"
 uvicorn = "^0.23.2"
+kubernetes = "^28.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
