migrate testrunner to kubernetes

--- a/testrunner/Dockerfile
+++ b/testrunner/Dockerfile
@@ -2,9 +2,7 @@ FROM python:3.9-slim
 
 RUN pip install pytest
 
-COPY entrypoint.py /entrypoint.py
-COPY tests /tests
+COPY . /testrunner
 
-RUN chmod +x /entrypoint.py
-# docker run -v /path/on/host:/path/in/container testrunner /path/in/container/filename.txt test1
-ENTRYPOINT ["python", "/entrypoint.py"]
+RUN chmod +x /testrunner/entrypoint.py
+ENTRYPOINT ["python", "/testrunner/entrypoint.py"]
