autograder server can retrieve testrunner results

--- a/kubernetes/server-role.yaml
+++ b/kubernetes/server-role.yaml
@@ -7,3 +7,6 @@ rules:
 - apiGroups: ["batch"]
   resources: ["jobs"]
   verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+- apiGroups: [""]
+  resources: ["pods", "pods/log"]
+  verbs: ["get", "list", "watch"]
