--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-ipykernel = "^6.25.2"
-fastapi = "^0.104.0"
+python = "^3.11"
+ipykernel = "^6.26.0"
+fastapi = "^0.104.1"
 uvicorn = "^0.23.2"
 kubernetes = "^28.1.0"
-
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
@@ -19,3 +19,7 @@ pytest = "^7.4.2"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+testpaths = ["tests"]
