--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ fastapi = "^0.104.1"
 uvicorn = "^0.23.2"
 kubernetes = "^28.1.0"
 requests = "^2.31.0"
+shared = { path = "../shared", develop = true }
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.2"
