--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,29 @@
 annotated-types==0.6.0 ; python_version >= "3.11" and python_version < "4.0"
 anyio==3.7.1 ; python_version >= "3.11" and python_version < "4.0"
-appnope==0.1.3 ; python_version >= "3.11" and python_version < "4.0" and (platform_system == "Darwin" or sys_platform == "darwin")
-asttokens==2.4.1 ; python_version >= "3.11" and python_version < "4.0"
 cachetools==5.3.2 ; python_version >= "3.11" and python_version < "4.0"
 certifi==2023.7.22 ; python_version >= "3.11" and python_version < "4.0"
-cffi==1.16.0 ; python_version >= "3.11" and python_version < "4.0" and implementation_name == "pypy"
 charset-normalizer==3.3.2 ; python_version >= "3.11" and python_version < "4.0"
 click==8.1.7 ; python_version >= "3.11" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and (sys_platform == "win32" or platform_system == "Windows")
-comm==0.1.4 ; python_version >= "3.11" and python_version < "4.0"
-debugpy==1.8.0 ; python_version >= "3.11" and python_version < "4.0"
-decorator==5.1.1 ; python_version >= "3.11" and python_version < "4.0"
-executing==2.0.1 ; python_version >= "3.11" and python_version < "4.0"
+colorama==0.4.6 ; python_version >= "3.11" and python_version < "4.0" and platform_system == "Windows"
 fastapi==0.104.1 ; python_version >= "3.11" and python_version < "4.0"
 google-auth==2.23.4 ; python_version >= "3.11" and python_version < "4.0"
 h11==0.14.0 ; python_version >= "3.11" and python_version < "4.0"
 idna==3.4 ; python_version >= "3.11" and python_version < "4.0"
-ipykernel==6.26.0 ; python_version >= "3.11" and python_version < "4.0"
-ipython==8.17.2 ; python_version >= "3.11" and python_version < "4.0"
-jedi==0.19.1 ; python_version >= "3.11" and python_version < "4.0"
-jupyter-client==8.5.0 ; python_version >= "3.11" and python_version < "4.0"
-jupyter-core==5.5.0 ; python_version >= "3.11" and python_version < "4.0"
 kubernetes==28.1.0 ; python_version >= "3.11" and python_version < "4.0"
-matplotlib-inline==0.1.6 ; python_version >= "3.11" and python_version < "4.0"
-nest-asyncio==1.5.8 ; python_version >= "3.11" and python_version < "4.0"
 oauthlib==3.2.2 ; python_version >= "3.11" and python_version < "4.0"
-packaging==23.2 ; python_version >= "3.11" and python_version < "4.0"
-parso==0.8.3 ; python_version >= "3.11" and python_version < "4.0"
-pexpect==4.8.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform != "win32"
-platformdirs==3.11.0 ; python_version >= "3.11" and python_version < "4.0"
-prompt-toolkit==3.0.39 ; python_version >= "3.11" and python_version < "4.0"
-psutil==5.9.6 ; python_version >= "3.11" and python_version < "4.0"
-ptyprocess==0.7.0 ; python_version >= "3.11" and python_version < "4.0" and sys_platform != "win32"
-pure-eval==0.2.2 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1-modules==0.3.0 ; python_version >= "3.11" and python_version < "4.0"
 pyasn1==0.5.0 ; python_version >= "3.11" and python_version < "4.0"
-pycparser==2.21 ; python_version >= "3.11" and python_version < "4.0" and implementation_name == "pypy"
 pydantic-core==2.10.1 ; python_version >= "3.11" and python_version < "4.0"
 pydantic==2.4.2 ; python_version >= "3.11" and python_version < "4.0"
-pygments==2.16.1 ; python_version >= "3.11" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.11" and python_version < "4.0"
-pywin32==306 ; sys_platform == "win32" and platform_python_implementation != "PyPy" and python_version >= "3.11" and python_version < "4.0"
 pyyaml==6.0.1 ; python_version >= "3.11" and python_version < "4.0"
-pyzmq==25.1.1 ; python_version >= "3.11" and python_version < "4.0"
 requests-oauthlib==1.3.1 ; python_version >= "3.11" and python_version < "4.0"
 requests==2.31.0 ; python_version >= "3.11" and python_version < "4.0"
 rsa==4.9 ; python_version >= "3.11" and python_version < "4"
 six==1.16.0 ; python_version >= "3.11" and python_version < "4.0"
 sniffio==1.3.0 ; python_version >= "3.11" and python_version < "4.0"
-stack-data==0.6.3 ; python_version >= "3.11" and python_version < "4.0"
 starlette==0.27.0 ; python_version >= "3.11" and python_version < "4.0"
-tornado==6.3.3 ; python_version >= "3.11" and python_version < "4.0"
-traitlets==5.13.0 ; python_version >= "3.11" and python_version < "4.0"
 typing-extensions==4.8.0 ; python_version >= "3.11" and python_version < "4.0"
 urllib3==1.26.18 ; python_version >= "3.11" and python_version < "4.0"
 uvicorn==0.23.2 ; python_version >= "3.11" and python_version < "4.0"
-wcwidth==0.2.9 ; python_version >= "3.11" and python_version < "4.0"
 websocket-client==1.6.4 ; python_version >= "3.11" and python_version < "4.0"
